chore: fix dates in tests
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/modules/backend.mdx
+++ b/docs/modules/backend.mdx
@@ -55,6 +55,7 @@ The `Backend` class serves as a central entry point to access models from your c
 {/* <!-- embedme python/examples/backend/providers/watsonx.py --> */}
 ```py Python [expandable]
 import asyncio
+import datetime
 import json
 import sys
 import traceback
@@ -149,9 +150,9 @@ async def watson_structure() -> None:
 
 async def watson_tool_calling() -> None:
     watsonx_llm = ChatModel.from_name(
-        "watsonx:ibm/granite-3-8b-instruct",
+        "watsonx:ibm/granite-3-3-8b-instruct",
     )
-    user_message = UserMessage("What is the current weather in Boston?")
+    user_message = UserMessage(f"What is the current weather in Boston? Current date is {datetime.datetime.today()}.")
     weather_tool = OpenMeteoTool()
     response = await watsonx_llm.create(messages=[user_message], tools=[weather_tool])
     tool_call_msg = response.get_tool_calls()[0]
