--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -46,7 +46,7 @@ The simplest way to use a tool is to instantiate it directly and call its `run()
 ```py Python [expandable]
 import asyncio
 import sys
-from datetime import date
+from datetime import datetime
 
 from beeai_framework.errors import FrameworkError
 from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
@@ -56,7 +56,7 @@ from beeai_framework.tools.weather import OpenMeteoTool, OpenMeteoToolInput
 async def main() -> None:
     tool = OpenMeteoTool()
     result = await tool.run(
-        input=OpenMeteoToolInput(location_name="New York", start_date=date(2025, 1, 1), end_date=date(2025, 2, 1))
+        input=OpenMeteoToolInput(location_name="New York", start_date=datetime.today(), end_date=datetime.today())
     ).middleware(GlobalTrajectoryMiddleware())
     print(result.get_text_content())
 
@@ -96,7 +96,7 @@ Tools often support additional configuration options to customize their behavior
 import asyncio
 import sys
 import traceback
-from datetime import date
+from datetime import datetime
 
 from beeai_framework.errors import FrameworkError
 from beeai_framework.tools.weather import OpenMeteoTool, OpenMeteoToolInput
@@ -106,7 +106,10 @@ async def main() -> None:
     tool = OpenMeteoTool()
     result = await tool.run(
         input=OpenMeteoToolInput(
-            location_name="New York", start_date=date(2025, 1, 1), end_date=date(2025, 1, 2), temperature_unit="celsius"
+            location_name="New York",
+            start_date=datetime.today(),
+            end_date=datetime.today(),
+            temperature_unit="celsius",
         )
     )
     print(result.get_text_content())
