--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -45,8 +45,8 @@ The simplest way to use a tool is to instantiate it directly and call its `run()
 {/* <!-- embedme python/examples/tools/base.py --> */}
 ```py Python [expandable]
 import asyncio
+import datetime
 import sys
-from datetime import datetime
 
 from beeai_framework.errors import FrameworkError
 from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
@@ -56,7 +56,9 @@ from beeai_framework.tools.weather import OpenMeteoTool, OpenMeteoToolInput
 async def main() -> None:
     tool = OpenMeteoTool()
     result = await tool.run(
-        input=OpenMeteoToolInput(location_name="New York", start_date=datetime.today(), end_date=datetime.today())
+        input=OpenMeteoToolInput(
+            location_name="New York", start_date=datetime.date.today(), end_date=datetime.date.today()
+        )
     ).middleware(GlobalTrajectoryMiddleware())
     print(result.get_text_content())
 
@@ -94,9 +96,9 @@ Tools often support additional configuration options to customize their behavior
 {/* <!-- embedme python/examples/tools/advanced.py --> */}
 ```py Python [expandable]
 import asyncio
+import datetime
 import sys
 import traceback
-from datetime import datetime
 
 from beeai_framework.errors import FrameworkError
 from beeai_framework.tools.weather import OpenMeteoTool, OpenMeteoToolInput
@@ -107,8 +109,8 @@ async def main() -> None:
     result = await tool.run(
         input=OpenMeteoToolInput(
             location_name="New York",
-            start_date=datetime.today(),
-            end_date=datetime.today(),
+            start_date=datetime.date.today(),
+            end_date=datetime.date.today(),
             temperature_unit="celsius",
         )
     )
