--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -76,10 +76,12 @@ if __name__ == "__main__":
 import { OpenMeteoTool } from "beeai-framework/tools/weather/openMeteo";
 
 const tool = new OpenMeteoTool();
+
+const today = new Date().toISOString().split('T')[0];
 const result = await tool.run({
   location: { name: "New York" },
-  start_date: "2024-10-10",
-  end_date: "2024-10-10",
+  start_date: today,
+  end_date: today,
 });
 console.log(result.getTextContent());
 
@@ -143,10 +145,11 @@ console.log(tool.inputSchema()); // (zod/json schema)
 
 await tool.cache.clear();
 
+const today = new Date().toISOString().split('T')[0]
 const result = await tool.run({
   location: { name: "New York" },
-  start_date: "2024-10-10",
-  end_date: "2024-10-10",
+  start_date: today,
+  end_date: today,
   temperature_unit: "celsius",
 });
 console.log(result.isEmpty()); // false
@@ -383,10 +386,12 @@ if __name__ == "__main__":
 import { OpenMeteoTool } from "beeai-framework/tools/weather/openMeteo";
 
 const tool = new OpenMeteoTool();
+
+const today = new Date().toISOString().split('T')[0];
 const result = await tool.run({
   location: { name: "New York" },
-  start_date: "2024-10-10",
-  end_date: "2024-10-10",
+  start_date: today,
+  end_date: today,
 });
 console.log(result.getTextContent());
 
