docs: change RAG icon on documentation (#958)
Signed-off-by: antonp <antonp@il.ibm.com>

--- a/docs/modules/rag.mdx
+++ b/docs/modules/rag.mdx
@@ -1,7 +1,7 @@
 ---
 title: "RAG"
 description: "Build intelligent agents that combine retrieval with generation for enhanced AI capabilities"
-icon: "search"
+icon: "folder-check"
 ---
 
 ## Overview
