--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -26,9 +26,7 @@ Key benefits
 
 	{/* <!-- embedme python/examples/serve/mcp_tool.py --> */}
 	```py Python
-	from mcp.server.fastmcp.server import Settings
-	
-	from beeai_framework.adapters.mcp.serve.server import MCPServer, MCPServerConfig
+	from beeai_framework.adapters.mcp.serve.server import MCPServer, MCPServerConfig, MCPSettings
 	from beeai_framework.tools import tool
 	from beeai_framework.tools.types import StringToolOutput
 	from beeai_framework.tools.weather.openmeteo import OpenMeteoTool
@@ -44,7 +42,7 @@ Key benefits
 	
 	def main() -> None:
 	    # create a MCP server with custom config, register ReverseTool and OpenMeteoTool to the MCP server and run it
-	    MCPServer(config=MCPServerConfig(transport="sse", settings=Settings(port=8001))).register_many(
+	    MCPServer(config=MCPServerConfig(transport="sse", settings=MCPSettings(port=8001))).register_many(
 	        [reverse_tool, OpenMeteoTool()]
 	    ).serve()
 	
