feat(rag): add text splitter backend class (#974)
Ref: #771

Signed-off-by: antonp <antonp@il.ibm.com>

--- a/docs/modules/rag.mdx
+++ b/docs/modules/rag.mdx
@@ -49,7 +49,7 @@ The following table outlines the key RAG components available in the BeeAI Frame
 | Component | Description | Compatibility | Future Compatibility |
 |-----------|-------------|---------------|---------------------|
 | [**Document Loaders**](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/document_loader.py) | Responsible for loading content from different formats and sources such as PDFs, web pages, and structured text files | LangChain | BeeAI |
-| **Text Splitters** | Splits long documents into workable chunks using various strategies, e.g. fixed length or preserving context | WIP | BeeAI, LangChain |
+| [**Text Splitters**](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/text_splitter.py) | Splits long documents into workable chunks using various strategies, e.g. fixed length or preserving context | LangChain | BeeAI |
 | [**Document**](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/types.py) | The basic data structure to house text content, metadata, and relevant scores for retrieval operations | BeeAI | - |
 | [**Vector Store**](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/vector_store.py) | Used to store document embeddings and retrieve them based on semantic similarity using embedding distance | LangChain | BeeAI, Llama-Index |
 | [**Document Processors**](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/document_processor.py) | Used to process and refine documents during the retrieval-generation lifecycle including reranking and filtering | Llama-Index | - |
@@ -165,6 +165,8 @@ import os
 import sys
 import traceback
 
+from dotenv import load_dotenv
+
 from beeai_framework.adapters.beeai.backend.document_processor import LLMDocumentReranker
 from beeai_framework.adapters.beeai.backend.vector_store import TemporalVectorStore
 from beeai_framework.adapters.langchain.backend.vector_store import LangChainVectorStore
@@ -173,21 +175,11 @@ from beeai_framework.backend import UserMessage
 from beeai_framework.backend.chat import ChatModel
 from beeai_framework.backend.document_loader import DocumentLoader
 from beeai_framework.backend.embedding import EmbeddingModel
+from beeai_framework.backend.text_splitter import TextSplitter
 from beeai_framework.backend.vector_store import VectorStore
 from beeai_framework.errors import FrameworkError
 from beeai_framework.logger import Logger
 from beeai_framework.memory import UnconstrainedMemory
-
-# LC dependencies - to be swapped with BAI dependencies
-try:
-    from langchain_text_splitters import RecursiveCharacterTextSplitter
-except ModuleNotFoundError as e:
-    raise ModuleNotFoundError(
-        "Optional modules are not found.\nRun 'pip install \"beeai-framework[rag]\"' to install."
-    ) from e
-
-
-from dotenv import load_dotenv
 
 load_dotenv()  # load environment variables
 logger = Logger("rag-agent", level=logging.DEBUG)
@@ -219,16 +211,11 @@ async def populate_documents() -> VectorStore | None:
         except Exception:
             return None
 
-        # Note: Text splitting will be abstracted in future versions
-        from beeai_framework.adapters.langchain.mappers.documents import (
-            document_to_lc_document,
-            lc_document_to_document,
+        # Use abstracted text splitter
+        text_splitter = TextSplitter.from_name(
+            name="langchain:RecursiveCharacterTextSplitter", chunk_size=2000, chunk_overlap=1000
         )
-
-        text_splitter = RecursiveCharacterTextSplitter(chunk_size=2000, chunk_overlap=1000)
-        lc_documents = [document_to_lc_document(doc) for doc in documents]
-        all_splits = text_splitter.split_documents(lc_documents)
-        documents = [lc_document_to_document(document) for document in all_splits]
+        documents = await text_splitter.split_documents(documents)
         print(f"Loaded {len(documents)} documents")
 
         print("Rebuilding vector store")
