--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -5,7 +5,7 @@ icon: "truck"
 ---
 
 The `Serve` module enables developers to expose components built with the BeeAI Framework through a server to external clients.
-Out of the box, we provide implementations for protocols such as ACP and MCP, allowing you to quickly serve existing functionalities.
+Out of the box, we provide implementations for protocols such as A2A and MCP, allowing you to quickly serve existing functionalities.
 You can also create your own custom adapter if needed.
 
 <Note>
@@ -18,7 +18,7 @@ The following table lists the currently supported providers:
 
 | Name                                                  | Dependency                                   | Location                    |
 |:-----------------------------------------------------|:--------------------------------------------|:---------------------------|
-| [ACP](https://agentcommunicationprotocol.dev)       | `beeai_framework.adapters.acp.serve`         | `beeai-platform[acp]`       |
+| [A2A](https://a2aprotocol.ai/)       | `beeai_framework.adapters.a2a.serve`         | `beeai-platform[a2a]`       |
 | [BeeAI Platform](https://beeai.dev/)                | `beeai_framework.adapters.beeai_platform.serve` | `beeai-platform[beeai-platform]` |
 | [MCP](https://modelcontextprotocol.io/) | `beeai_framework.adapters.mcp.serve`         | `beeai-platform[mcp]`       |
 
@@ -28,18 +28,30 @@ For more details, see the [Integrations page](/integrations).
 
 ## Usage
 
+{/* <!-- embedme python/examples/serve/a2a_server.py --> */}
 ```python
-from beeai_framework.adapters.acp import ACPServer, ACPServerConfig
-from beeai_framework.agents.tool_calling.agent import ToolCallingAgent
-from beeai_framework.memory import UnconstrainedMemory
+from beeai_framework.adapters.a2a import A2AServer, A2AServerConfig
+from beeai_framework.agents.experimental import RequirementAgent
 from beeai_framework.backend import ChatModel
+from beeai_framework.memory import UnconstrainedMemory
+from beeai_framework.serve.utils import LRUMemoryManager
+from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
+from beeai_framework.tools.weather import OpenMeteoTool
 
- # creates an agent
-agent = ToolCallingAgent(llm=ChatModel.from_name("ollama:granite3.3"), tools=[], memory=UnconstrainedMemory())
 
-server = ACPServer(config=ACPServerConfig(port=8001)) # creates a server
-server.register(agent) # register the agent
-server.serve() # spawns a server
+def main() -> None:
+    llm = ChatModel.from_name("ollama:granite3.3:8b")
+    agent = RequirementAgent(
+        llm=llm,
+        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
+        memory=UnconstrainedMemory(),
+    )
+
+    A2AServer(config=A2AServerConfig(port=9999), memory_manager=LRUMemoryManager(maxsize=100)).register(agent).serve()
+
+
+if __name__ == "__main__":
+    main()
 ```
 
 ## Extending Functionality
