--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -69,6 +69,9 @@ A2AAgent lets you easily connect with external agents using the A2A protocol.
 
 A2AServer lets you expose agents built in the BeeAI framework via A2A protocol.
 
+<Note>
+	A2A supports only one agent per server.
+</Note>
 
 <CodeGroup>
 
@@ -92,7 +95,7 @@ A2AServer lets you expose agents built in the BeeAI framework via A2A protocol.
 	    )
 	
 	    # Register the agent with the A2A server and run the HTTP server
-	    # For the ToolCallingAgent, we dont need to specify ACPAgent factory method
+	    # For the ToolCallingAgent, we don't need to specify ACPAgent factory method
 	    # because it is already registered in the A2AServer
 	    # we use LRU memory manager to keep limited amount of sessions in the memory
 	    A2AServer(config=A2AServerConfig(port=9999), memory_manager=LRUMemoryManager(maxsize=100)).register(agent).serve()
