--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -51,7 +51,13 @@ Here's a simple example that uses the built-in `chat` agent:
 	async def main() -> None:
 	    reader = ConsoleReader()
 	
-	    agent = BeeAIPlatformAgent(agent_name="chat", url="http://127.0.0.1:8333/api/v1/acp/", memory=UnconstrainedMemory())
+	    agents = await BeeAIPlatformAgent.from_platform(url="http://127.0.0.1:8333", memory=UnconstrainedMemory())
+	    agent_name = "Granite chat agent"
+	    try:
+	        agent = next(agent for agent in agents if agent.name == agent_name)
+	    except StopIteration:
+	        raise ValueError(f"Agent with name `{agent_name}` not found") from None
+	
 	    for prompt in reader:
 	        # Run the agent and observe events
 	        response = await agent.run(prompt).on(
@@ -71,42 +77,8 @@ Here's a simple example that uses the built-in `chat` agent:
 	
 	```
 
-	{/* <!-- embedme typescript/examples/agents/providers/beeai_platform.ts --> */}
-
-	```ts TypeScript
-	import "dotenv/config.js";
-	import { BeeAIPlatformAgent } from "beeai-framework/adapters/beeai_platform/agents/agent";
-	import { createConsoleReader } from "examples/helpers/io.js";
-	import { FrameworkError } from "beeai-framework/errors";
-	import { TokenMemory } from "beeai-framework/memory/tokenMemory";
-	
-	const agentName = "chat";
-	
-	const instance = new BeeAIPlatformAgent({
-	  url: "http://127.0.0.1:8333/api/v1/acp",
-	  agentName,
-	  memory: new TokenMemory(),
-	});
-	
-	const reader = createConsoleReader();
-	
-	try {
-	  for await (const { prompt } of reader) {
-	    const result = await instance.run({ input: prompt }).observe((emitter) => {
-	      emitter.on("update", (data) => {
-	        reader.write(`Agent (received progress) 🤖 : `, JSON.stringify(data.value, null, 2));
-	      });
-	      emitter.on("error", (data) => {
-	        reader.write(`Agent (error) 🤖 : `, data.message);
-	      });
-	    });
-	
-	    reader.write(`Agent (${agentName}) 🤖 : `, result.result.text);
-	  }
-	} catch (error) {
-	  reader.write("Agent (error)  🤖", FrameworkError.ensure(error).dump());
-	}
-	
+		```ts TypeScript
+	// COMING SOON
 	```
 </CodeGroup>
 
@@ -195,6 +167,9 @@ _Source: python/examples/workflows/remote.py_
 
 The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as an ACP server. It is automatically registered with the platform, allowing you to access and use the agents directly within the framework.
 
+<Note>
+	BeeAI platform supports only one agent per server.
+</Note>
 
 <CodeGroup>
 
@@ -209,6 +184,13 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
 	from beeai_framework.tools.weather import OpenMeteoTool
 	
+	try:
+	    from beeai_sdk.a2a.extensions.ui.agent_detail import AgentDetail
+	except ModuleNotFoundError as e:
+	    raise ModuleNotFoundError(
+	        "Optional module [beeai-platform] not found.\nRun 'pip install \"beeai-framework[beeai-platform]\"' to install."
+	    ) from e
+	
 	
 	def main() -> None:
 	    llm = ChatModel.from_name("ollama:granite3.3:8b")
@@ -220,14 +202,12 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	    )
 	
 	    # Runs HTTP server that registers to BeeAI platform
-	    server = BeeAIPlatformServer()
+	    server = BeeAIPlatformServer(config={"configure_telemetry": False})
 	    server.register(
 	        agent,
-	        name="granite_chat_agent",
+	        name="Granite chat agent",
 	        description="Simple chat agent",  # (optional)
-	        ui={"type": "chat"},  # default is chat (optional)
-	        tags=["example"],  # (optional)
-	        recommended_models=["granite3.3:8b"],  # (optional)
+	        detail=AgentDetail(interaction_mode="multi-turn"),  # default is multi-turn (optional)
 	    )
 	    server.serve()
 	
