docs: Update a2a.mdx (#1035)
Signed-off-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>

--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -3,7 +3,7 @@ title: "A2A"
 icon: "server"
 ---
 
-The A2A Protocol, developed by Google, is an open standard that allows AI agents to communicate and collaborate across various platforms and frameworks, independent of the underlying technologies they use.
+The **Agent2Agent (A2A) Protocol** is the open standard for AI agent communication. Developed under the Linux Foundation, A2A makes it possible for agents to work together seamlessly across platforms, frameworks, and ecosystems.
 
 <Note>
 	Supported in Python only.
