--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -47,11 +47,16 @@ def main() -> None:
         memory=UnconstrainedMemory(),
     )
 
+    # Register the agent with the A2A server and run the HTTP server
+    # For the ToolCallingAgent, we don't need to specify ACPAgent factory method
+    # because it is already registered in the A2AServer
+    # we use LRU memory manager to keep limited amount of sessions in the memory
     A2AServer(config=A2AServerConfig(port=9999), memory_manager=LRUMemoryManager(maxsize=100)).register(agent).serve()
 
 
 if __name__ == "__main__":
     main()
+
 ```
 
 ## Extending Functionality
