docs: update BeeAI Platform integration (#1034)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -87,7 +87,7 @@ Here's a simple example that uses the built-in `chat` agent:
 
 You can compose multiple BeeAI platform agents into advanced workflows using the BeeAI framework's workflow capabilities. This example demonstrates a research and content creation pipeline:
 
-In this example, the `gpt-researcher` agent researches a topic, and the `podcast-creator` takes the research report and produces a podcast transcript.
+In this example, the `GPT Researcher` agent researches a topic, and the `Podcast creator` takes the research report and produces a podcast transcript.
 
 You can adjust or expand this pattern to orchestrate more complex multi agent workflows.
 
@@ -100,7 +100,7 @@ import traceback
 
 from pydantic import BaseModel
 
-from beeai_framework.adapters.acp.agents import ACPAgent
+from beeai_framework.adapters.beeai_platform import BeeAIPlatformAgent
 from beeai_framework.errors import FrameworkError
 from beeai_framework.memory.unconstrained_memory import UnconstrainedMemory
 from beeai_framework.workflows import Workflow
@@ -115,23 +115,27 @@ async def main() -> None:
         research: str | None = None
         output: str | None = None
 
+    agents = await BeeAIPlatformAgent.from_platform(url="http://127.0.0.1:8333", memory=UnconstrainedMemory())
+
     async def research(state: State) -> None:
-        agent = ACPAgent(
-            agent_name="gpt-researcher", url="http://127.0.0.1:8333/api/v1/acp", memory=UnconstrainedMemory()
-        )
         # Run the agent and observe events
-        response = await agent.run(state.topic).on(
+        try:
+            research_agent = next(agent for agent in agents if agent.name == "GPT Researcher")
+        except StopIteration:
+            raise ValueError("Agent 'GPT Researcher' not found") from None
+        response = await research_agent.run(state.topic).on(
             "update",
             lambda data, _: (reader.write("Agent 🤖 (debug) : ", data)),
         )
         state.research = response.result.text
 
     async def podcast(state: State) -> None:
-        agent = ACPAgent(
-            agent_name="podcast-creator", url="http://127.0.0.1:8333/api/v1/acp", memory=UnconstrainedMemory()
-        )
         # Run the agent and observe events
-        response = await agent.run(state.research or "").on(
+        try:
+            podcast_agent = next(agent for agent in agents if agent.name == "Podcast creator")
+        except StopIteration:
+            raise ValueError("Agent 'Podcast creator' not found") from None
+        response = await podcast_agent.run(state.research or "").on(
             "update",
             lambda data, _: (reader.write("Agent 🤖 (debug) : ", data)),
         )
