docs: update community call slides 26-08-2025.md
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/community/community-calls/26-08-2025.md
+++ b/docs/community/community-calls/26-08-2025.md
@@ -4,35 +4,33 @@
 
 ---
 
-## 🛠️ Major Improvements
+## 🛠️ Improvements
 
-### General
-- **Parallel Tool Calls Support** - Execute multiple tools simultaneously for better performance
-- **Backend Streaming** - Better text and tool calls streaming processing and error handling
-- **Serve module** - MCP, BeeAI platform and A2A are now compatible with the latest versions
-- **OpenTelemetry** - Our OpenTelemetry integration has been reworked from scratch, is more reliable and supports all modules in the framework (see our Observability docs page). 
+- **Streaming** - Better text and tool calls streaming processing and error handling
+- **Parallel Tool Calls** - Execute multiple tools simultaneously for better performance
+- **Serve Module** - MCP, BeeAI platform and A2A are now compatible with the latest versions
+- **OpenTelemetry** - Is more reliable and supports all modules in the framework (see our [Observability](https://framework.beeai.dev/modules/observability) docs page). 
 
-### RAG Module Expansion
+### RAG Module
 - **Vector Store Tool** - Semantic search capabilities for any agent
 - **Document Loader** - Support for multiple document formats
 - **Text Splitter Backend** - Intelligent document chunking strategies
 - **Dynamic Loading** - Load RAG components using configuration strings
+
+See the [RAG](https://framework.beeai.dev/modules/rag) docs page for more details.
 
 ---
 
 ## 🔧 Quality & Reliability Updates
 
 ### LLMs, Agents and Tools
+- Enhanced MCP client session cleanup
+- Add Google Gemini Backend Adapter
 - Fixed streaming chunk processing for better real-time responses
 - Enhanced tool choice validation and error messages
-- Add Google Gemini adapter
-- Add cost tracking (part of the ChatModelOutput) and telemetry
+- Add cost tracking (part of the ChatModelOutput)
 - Handle duplicated rules in RequirementAgent
 - Improve the performance of the Handoff tool
-- Enhanced MCP client session cleanup
-
-### Developer Experience
-- New snapshot testing with Syrupy for better test reliability
 
 ---
 
@@ -41,9 +39,9 @@
 **Priorities:**
 1. **Runnables Migration** - Major refactoring to the agents so that are easier to use, compose and build.
 2. **Workflows V2** - Introducing a decorator-based, fully declarative approach to workflows
-3. **Loader Module** - Configure agents with YAML files for easier deployment
-4. **Simplified Serving** - Streamlined platform deployment experience
-5. **Agent Consolidation** - Single unified `Agent` class to replace multiple agent types
+3. **Loader Module** - Configure frameworks' primitives with YAML (JSON) files
+4. **Agent Consolidation** - Consolidate the agents into a single agent
+5. **Built-in serving functionality** 
 
 ---
 
@@ -51,7 +49,6 @@
 
 - **Workflows V2** - Let us know your thoughts on [the proposal](https://github.com/i-am-bee/beeai-framework/discussions/1005)!
 - **Chat Completion Serve Integration** Let us know if you'd like to see the [integration](https://github.com/i-am-bee/beeai-framework/discussions/1008) in the serve module.
-- **Test the new Runnable interface foundation** - Help us design the agent/workflow integration
 
 **Join the discussion:** [discord.gg/NradeA6ZNF](https://discord.gg/NradeA6ZNF)
 
