docs: update quickstart (#1047)
* docs: typo in quickstart

Signed-off-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>

---------

Signed-off-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>
Co-authored-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>

--- a/docs/introduction/quickstart.mdx
+++ b/docs/introduction/quickstart.mdx
@@ -7,8 +7,7 @@ icon: "rocket"
 <Steps>
    <Step title="Clone a starter repo">
 
-  Get started quickly with the a BeeAI Framework starter template.
-  for [Python](https://github.com/i-am-bee/beeai-framework-py-starter) or [Typescript](https://github.com/i-am-bee/beeai-framework-ts-starter).
+  Quickly get started with the BeeAI Framework starter template:
 
   <CodeGroup>
   ```bash Python
